src/sass/_forms.scss
.create-instance,
.edit-instance,
.create-profile,
.edit-profile,
.create-project,
.edit-project,
.edit-snapshot-config,
.cluster-group-form {
  padding-bottom: 0;

  .p-notification--caution {
    background-image: none;
    border: 0;
    padding-left: $spv--large;
  }

  .form {
    display: flex;

    .form-navigation {
      overflow: auto;
      width: 18rem;

      .p-side-navigation__link {
        min-width: 13rem;
        text-align: left;
      }
    }

    .form-contents {
      overflow-y: auto;
      padding-left: 2.5rem;

      .details {
        max-width: 42rem;
      }
    }

    .network-device {
      display: flex;

      > :first-child {
        flex-grow: 1;
        margin-right: $sph--large;
      }
    }

    .image-change-link {
      align-self: end;
      margin-bottom: 6px;
    }

    .image-select-button {
      align-self: end;
    }

    .profile-action-btn {
      margin-right: $sph--large;
    }

    .profile-delete-btn {
      margin-left: $sph--large;
    }

    .delete-device {
      margin-top: $spv--x-large;
    }

    .is-disabled {
      cursor: not-allowed;
      opacity: 0.33;
    }
  }

  @include mobile-and-tablet {
    .form {
      margin-top: 13px;
    }
  }

  .cpu-limit-label,
  .memory-limit-label {
    align-items: flex-end;
    display: flex;

    > * {
      margin-bottom: $spv--large;
    }

    > :first-child {
      margin-right: $sph--x-large;
    }
  }

  .snapshot-schedule {
    > * {
      margin-bottom: $spv--large;
    }
  }

  .memory-limit-with-unit {
    display: flex;

    > :first-child {
      margin-right: $sph--large;
    }

    .p-form__group {
      margin-top: 0;
    }

    input {
      min-width: 0;
    }

    select {
      margin-top: 0;
      min-width: 0;
      width: 6rem;
    }
  }

  .cloud-init-config {
    .code-editor-wrapper {
      max-height: 35vh;
      min-height: 7.5rem;
    }
  }

  .checkbox-label-tooltip {
    > span {
      display: inherit !important;
      margin-left: $sph--x-small;
    }
  }
}

.p-panel__content:has(.edit-instance),
.p-panel__content:has(.edit-profile) {
  padding-bottom: 0;
}

.image-select-modal {
  .p-modal__dialog {
    overflow-y: hidden;
  }

  > section {
    min-height: 100%;
  }

  .image-select-filters {
    height: 100%;
    margin-right: 2rem;
  }

  @include mobile-and-tablet {
    .image-select-filters {
      display: none;
    }
  }

  .table-image-select {
    .u-row:hover {
      background-color: $colors--light-theme--background-hover;
      cursor: pointer;
    }

    th,
    td {
      &:nth-child(1) {
        width: 7rem;
      }

      &:nth-child(2) {
        width: 5rem;
      }

      &:nth-child(3) {
        width: 7rem;
      }

      &:nth-child(4) {
        width: 6rem;
      }

      &:nth-child(5) {
        width: 9rem;
      }

      &:nth-child(6) {
        width: 6rem;
      }
    }
  }

  .image-list {
    max-height: calc(100vh - 140px);
    overflow-y: hidden;
  }

  @include large {
    .search-image {
      margin-top: calc(2.5rem + 3px);
      max-width: 30rem;
    }

    .image-list {
      max-height: calc(100vh - 220px);
    }
  }

  @include extra-large {
    .image-list {
      max-height: calc(100vh - 250px);
    }
  }

  #modal-bottom-space {
    margin-bottom: 2rem;
  }
}

